--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ h1,h2,h3{
 }
 a{
   text-decoration: none;
+  color: #635e5e;
 }
 /* container */
 .container{
@@ -35,7 +36,7 @@ header ul li {
   font-weight: 100;
 }
 header ul li a{
-  color: #4f4d4d;
+  color: #333;
 }
 header h1{
   font-size: 1.6rem;
@@ -60,4 +61,11 @@ header ul li button{
 header ul li button:hover{
   color: white;
   background-color: rgb(172, 44, 44);
+}
+/* nav */
+nav{
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  font-size: 14px;
 }
