--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@ a{
   text-decoration: none;
   color: #635e5e;
 }
+body{
+  font-family: "Cormorant Garamond", serif;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: #333
+}
 /* container */
 .container{
   margin: auto;
@@ -69,3 +75,38 @@ nav{
   justify-content: space-between;
   font-size: 14px;
 }
+/* content */
+.content{
+  display: grid;
+  grid-template-columns: 383px 383px 383px;
+  gap: 20px;
+  padding: 1.6rem 0rem;
+  color: #635e5e;
+  border-bottom: 1px solid #333;
+}
+.content h3{
+  color: black;
+  font-size: 20px;
+  font-weight: 700;
+  
+  padding: 0.5rem 0rem 0rem 0rem;
+}
+.content article img{
+  max-width: 350px;
+}
+.content p,h5{
+  margin-bottom: 0.5rem;
+}
+
+.bloc img{
+  width: 80px;
+}
+
+.bloc{
+  display: grid;
+  column-gap: 10px;
+  
+}
+
+
+
