--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ a{
 body{
   font-family: "Cormorant Garamond", serif;
     font-size: 1rem;
-    line-height: 1.5rem;
+    line-height: 1.2rem;
     color: #333
 }
 /* container */
@@ -82,7 +82,7 @@ nav{
   gap: 20px;
   padding: 1.6rem 0rem;
   color: #635e5e;
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #e6e6e6;
 }
 .content h3{
   color: black;
@@ -94,19 +94,108 @@ nav{
 .content article img{
   max-width: 350px;
 }
-.content p,h5{
-  margin-bottom: 0.5rem;
+.content h5{
+  color: black;
 }
-
-.bloc img{
-  width: 80px;
+.content article i {
+  margin: 0rem 0.5rem;
+}
+.content p{
+  margin: 0.5rem 0rem;
 }
 
 .bloc{
+  margin-bottom: 1rem;
+}
+.bloc img{
+  width: 80px;
+}
+.bloc{
   display: grid;
-  column-gap: 10px;
-  
+  grid-template-columns: 80px 1fr ;
+  grid-template-rows: 80px auto auto auto;
+  grid-template-areas: 
+  "img h3"
+  "p p"
+  "h5 ."
+  "em em"
+  ;
+}
+.bloc img{
+  grid-area: img;
+}
+.bloc p {
+  grid-area: p;
+}
+.bloc h3{
+  grid-area: h3;
+  margin-left: 0.5rem;
+}
+.bloc h5{
+  grid-area: h5;
+}
+.bloc em {
+  grid-area: em;
+  margin: 0.5rem 0;
+}
+/* ads */
+.ads{
+  background: #e6e6e6;
+  margin: 2rem 0rem;
+  display: grid;
+  grid-template-columns: 200px 1fr auto 1fr;
+  grid-template-rows: 1fr auto auto auto 1fr;
+   grid-template-areas: 
+   "img . . ."
+   "img . h1 ."
+   "img . p ."
+   "img . form ."
+   "img . . ."
+   
+   ;
+
+}
+.ads img{
+  grid-area: img;
+  max-width: 200px;
+
+}
+.ads h1{
+  grid-area: h1;
+  font-size: 2.6rem ;
+  margin: 0;
+}
+.ads form {
+  grid-area: form;
+}
+.ads p{
+  grid-area: p;
+  margin: 1rem 0rem;
 }
 
+.ads form input {
+  border: none;
+  padding: 0.5rem 0rem;
+  outline: none;
+  border-bottom: 1px solid black;
+  background: #e6e6e6;
+}
+.ads form button{
+  margin-left: 0.5rem;
+  padding: 11px 9px;
+  border-radius: 5px;
+  cursor: pointer;
+  background: black;
+  color: white;
+  font-size: 16px;
+  border: none;
+ 
+}
+.ads form button:hover{
+  border: 1px solid black;
+  color: black;
+  background: whitesmoke;
+}
+  
 
 
